<resources>
    <string name="app_name">DJAutocontrol</string>
    <string name="action_settings">Settings</string>
    <string name="disconnected">Disconnected</string>
    <string name="product_information">Product Information</string>
    <string name="connection_loose">Status: No Product Connected</string>
    <string name="sdk_version">DJI SDK Version: %1$s</string>
    <string name="drone_status">Drone status</string>
    <string name="camera_fpv">Camera</string>
    <string name="remote_control">Remote control</string>
    <string name="gps_track">GPS track</string>
    <string name="gps_route">GPS route</string>
    <string name="static_track">Static track</string>
    <string name="moving_track">Moving track</string>
    <string name="site_landing">Site landing</string>
    <string name="automatic_handle">Automatic</string>
    <string name="gps_map">GPS map view</string>
    <string name="push_info">Push Info</string>
    <string name="drone_id">880498DC</string>
    <string name="copy_right">The Copyright of the Evil Fish Studio</string>
</resources>
